# IsingModel

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  isingMarkovChainMonteCarlo.cpp  meanfieldapprox.py  montecarlomethod.ipynb
markovchainmontecarlo.dSYM/Contents/Resources/DWARF/: markovchainmontecarlo
source/: isingMarkovChainMonteCarlo.cpp
